assets/css/tailwind.css
/* 
Notes: 
- BlinkMacSystemFont makes Chrome(ium?) use the system font under macOS
 */

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {

  .accent-strong strong {
    /* markdown-it produces <stong> tags for text wrapped in `**`. `--accent-color` isn't magic, it's just a custom variable we define. This is unused now, sice we use gradients for everything */
    @apply text-[var(--accent-color)] font-[unset]
  }


  html {

    /* Set size of 1rem 
        By default, this was 16px (from tailwind?). But Apple website and default is 12px. Edit: It seems 12px is what Apple uses for the very smallest text. Couldn't find anything smaller. */

    @apply sm:text-[12px] text-[12px];

    /* Disable vertical scroll - is re-enabled in js after hydration in index.html
      Note: Tried to put this inside index.html where I think it belongs but dindn't work there for some reason. */
    overflow-y: clip;

    /* Set default font family (Defined in tailwind.config.js) */
    @apply font-body;

    /* Enable text antialiasing 
        Apple website uses this. Makes text a bit thinner / sharper */
    @apply antialiased;
  }

  body {
    /* Disable horizontal scroll (setting this on the html element doesn't work on mobile) */
    @apply overflow-x-clip;

    /* Set background */
    @apply bg-neutral-50;
    
    /* zoom: 122%; Like Feedback Assistant */

    
  }


  /* General list styling 
    (Tailwind removes this for some reason) */

  ol {
    --indent: 1.5em;
    list-style-type: decimal;
  } 
  ul {
    --indent: 1.0em;
    list-style-type: disc;
  }
  ol, ul {

    --wrap-indent: 0em; /* This is different on Chrome vs Safari. To be used with style-position: inside */
    list-style-position: outside;

    padding-left: calc(var(--indent) + var(--wrap-indent));
    text-indent: calc(-1 * var(--wrap-indent));
  }
  li {
    /* padding-left: 0em;
    padding-bottom: 0.2em;
    line-height: 1.3; */
  }

    /* General Link styling
      (Tailwind removes this for some reason) */
  a {
    text-decoration: underline;
  }

  /* Custom underline 
      Works with our gradient-ed text */
  .cool-underline:after {

    /* Custom underline, because normal css underline doesnt work when we apply gradient to text. The tw gradient stops are automatically inherited down the tree. (As are all css vars)*/
    @apply content-[''] absolute left-0 right-0 bottom-[2.5px] h-[1px] w-full rounded-[1px] bg-gradient-to-l
  }
}


@layer components {


  .button-glow-2 {
    --extra-filters: blur(12px) hue-rotate(00deg);
    @apply bg-white/[0.1] glow-2;
  }
  .safari-text-glow-2 {

    /* Notes:
        - We designed the base style for Chrome, but in Safari the saturation, colors, and brightness seem a bit different on the backdrop filters.  */

    mask: linear-gradient(black, black) text;
    @apply text-white/[0.5];
    backdrop-filter: contrast(0.7) saturate(36.1) brightness(1.4) hue-rotate(10deg);
  }
  .text-glow-2 {

    /* Notes:
        - When using this on a <span> or <strong> it works when you set `inline-block` 
        - This is primarily made for the little glowing accented names in the quote cards, but currently also used for other stuff, usually with adjusted text opacity, which makes the glow weaker. */

    --extra-filters: ;
    mask: linear-gradient(black, black) text;
    @apply text-white/[0.3] glow-2;
  }
  .firefox .text-glow-2 {
    /* Firefox doesn't support the masking stuff */
    @apply text-sky-300/[0.8] backdrop-filter-none;
  }

  .glow-2 {
    /* backdrop-filter: contrast(0.85) saturate(10.5) brightness(2.2) hue-rotate(10deg); */

    /* vvv Attempt at making it look better (failed) */

    /* vvv Lower contrast and lower brightness keeps highlights the same while making unlit text a bit ligher */
    /* backdrop-filter: contrast(0.75) saturate(10.5) brightness(1.9) hue-rotate(10deg);  */

    /* vvv Lower brightness until unlit is og lightness again, and highlights are less blown out */
    backdrop-filter: contrast(0.75) saturate(10.5) brightness(1.7) hue-rotate(10deg) var(--extra-filters);

    /* vvv Lower dynamic range even more */
    /* backdrop-filter: contrast(0.66) saturate(10.5) brightness(1.4) hue-rotate(10deg); */

    /* vvv Lower dynamic range evennnn more */
    /* backdrop-filter: contrast(0.5) saturate(10.5) brightness(1.4) hue-rotate(10deg); */
  }

  .text-glow {
    mask: linear-gradient(black, black) text;
    /* @apply text-white/[0.5] glow-2; */
    @apply text-[hsla(0,0%,100%,0.3)] glow;
  }
  .glow {

    /* Note worked on this for long time for tagline background, but couldn't make it look better than glow-2. So just using that, with different text opacities. */

    --con1:   0.85;  /* 0.85 */;
    --sat:    10.4; /* 10.4 */;
    --con2:   1; /* 1.0  */;
    --bri:    2.2;  /* 2.2  */;
    --hue:    0deg;
    --sat2:   1;
    
    --bri-squash: 1;
    --sat-squash: 1;

    backdrop-filter: contrast(var(--con1)) saturate(var(--sat)) contrast(var(--con2)) brightness(var(--bri)) hue-rotate(var(--hue)) saturate(var(--sat2))
          brightness(var(--bri-squash)) brightness(calc(1/var(--bri-squash)))
          saturate(var(--sat-squash)) saturate(calc(1/var(--sat-squash)));

    /* vvv History */

    /* @apply text-white/[0.3] backdrop-saturate-[4.0] backdrop-brightness-[2.3] backdrop-contrast-[0.3] bg-blend-normal filter saturate-[1.5]; */
    /* @apply text-white/[0.3] backdrop-saturate-[4.4] backdrop-brightness-[2.3] backdrop-contrast-[1] bg-blend-normal filter saturate-[1.2]; */
    /* vvv I like this one */
    /* @apply backdrop-contrast-[0.85] backdrop-saturate-[10.4] backdrop-brightness-[2.2]; */
    /* @apply text-white/[0.3] backdrop-contrast-[0.85] backdrop-saturate-[10.4] backdrop-brightness-[2.2] hue-rotate-[20deg]; */
    /* @apply text-white/[0.3] backdrop-contrast-[1.75] backdrop-saturate-[13.4] backdrop-brightness-[2.2] filter brightness-[0.9]; */
    /* @apply text-white/[0.15]; backdrop-filter: brightness(1) saturate(4) brightness(2) contrast(0.99) brightness(1); */
    /* @apply text-white/[0.5]; backdrop-filter: brightness(1) saturate(18) contrast(1.5) brightness(1.4)  brightness(1); */
  
    /* @apply text-white/[0.7] backdrop-saturate-[15.0] backdrop-brightness-[2.0] backdrop-contrast-[1.0]; */
    /* @apply text-white/[0.0]; backdrop-filter: contrast(0.5) saturate(4.0) brightness(2.0); */
    /* vvv Like this one */
    /* @apply text-white/[0.3]; backdrop-filter: brightness(4.0) saturate(4.0); filter: hue-rotate(40deg); */
    /* @apply text-white/[0.3]; backdrop-filter: brightness(4.0) saturate(4.0); filter: hue-rotate(55deg) saturate(0.7); */

  }

  

  .btn { /* This is from the tutorial - TODO: Remove */
    @apply bg-[#12b489] text-white px-3 py-2 rounded-md text-sm;
  }
  .card { /* This is from the tutorial - TODO: Remove */
    @apply p-3 rounded-2xl bg-white shadow-md h-full;
  }
}

@layer utilities {

  .paused {
    animation-play-state: paused !important; /* Not sure it's smart to use !important here, but necessary rn */
  }
  
 .normal-feature-card-style-red {
  @apply bg-gradient-to-b from-rose-400 to-pink-500;
 }
 .normal-feature-card-style-red-content {
  @apply shadow-red-900/40;
 }

 .normal-feature-card-style-orange {
  @apply bg-gradient-to-b from-amber-400 to-orange-500;
 }
 .normal-feature-card-style-orange-content {
  @apply shadow-orange-900/30;
 }

 .normal-feature-card-style-yellow {
  @apply bg-gradient-to-b from-yellow-400 to-amber-500;
 }
 .normal-feature-card-style-yellow-content {
  @apply shadow-yellow-800/30;
 }

 .normal-feature-card-style-blue {
  @apply bg-gradient-to-b from-cyan-400 to-blue-500;
 }
 .normal-feature-card-style-blue-content {
  @apply shadow-blue-900/40;
 }

 .normal-feature-card-style-green {
  @apply bg-gradient-to-b from-lime-400 to-emerald-500;
 }
 .normal-feature-card-style-green-content {
  @apply shadow-green-900/30;
 }

 .normal-feature-card-style-purple {
  @apply bg-gradient-to-b from-fuchsia-400 to-violet-500;
 }
 .normal-feature-card-style-purple-content {
  @apply shadow-violet-900/40;
 }

 .normal-feature-card-style-yellow-purple {
  @apply bg-gradient-to-b from-amber-400 to-fuchsia-500;
 }
 .normal-feature-card-style-yellow-purple-content {
  @apply shadow-pink-900/30;
 }

 .normal-feature-card-style-blue-green {
  @apply bg-gradient-to-b from-cyan-300 to-green-500;
 }
 .normal-feature-card-style-blue-green-content {
  @apply shadow-cyan-900/30;
 }

 .normal-feature-card-style-blue-purple {
  @apply bg-gradient-to-b from-cyan-400 to-fuchsia-500 ;
 }
 .normal-feature-card-style-blue-purple-content {
  @apply bgshadow-purple-900/30;
 }

 .normal-feature-card-style-yellow-green {
  @apply bg-gradient-to-b from-amber-300 to-green-500;
 }
 .normal-feature-card-style-yellow-green-content {
  @apply shadow-lime-900/30;
 }

 .normal-feature-card-style-gray {
  @apply bg-gradient-to-b from-slate-400 to-stone-500;
 }
 .normal-feature-card-style-gray-content {
  @apply shadow-gray-700/40;
 }


  .text-gradient-to-r {
    @apply text-gradient-base bg-gradient-to-r;
  }
  .text-gradient-to-l {
    @apply text-gradient-base bg-gradient-to-l;
  }
  .text-gradient-base {
    @apply text-transparent;
    -webkit-background-clip: text; /* Webkit to try and fix underlines, but don't think it works */
    background-clip: text;

    /* Set `display: inline-block` and `position: relative` to make this compatible with cool-underline. We're not doing that here because this breaks line wrapping. */
  }

  .gradient-violet {
    @apply from-indigo-500 to-fuchsia-500;
  }
  .gradient-red { 
    @apply to-[hsl(0,100%,62%)] via-35% via-[hsl(4,80%,53%)] from-[hsla(10,95%,40%)] 
    /* @apply to-red-500 from-red-600 */
  }
  .gradient-orange-red { 
    @apply from-red-500 to-amber-400
  }
  .gradient-blue-light-blue {
    @apply from-blue-500 to-cyan-300;
  }
  .gradient-blue {
    /* @apply from-blue-500 to-cyan-300; */
    /* @apply from-[#065ff7] to-[color(display-p3_-0.0495_0.6058_1.0307)]  <- Most intense gradient I could come up with */
    @apply from-[#065ff7] to-[#329ee8] /* <- Less neon version of most intense  */
  }
  .gradient-blue-wide {
    @apply from-indigo-400 to-teal-300;
  }

  .gradient-blue-green {
    @apply from-cyan-400 to-teal-300;
  }
  .gradient-green-yellow {
    @apply from-green-400 to-yellow-300;
  }
  .gradient-green-big {
    @apply to-[#a0f102] from-[#22c55e] /* Made with big text as basis, because simply applying brightness filter to other green gradient didn't work */
  }
  .gradient-green {
    @apply to-[#039d23] from-[#017e03]
  }
  /* .text-gradient-light-yellow {
    @apply from-lime-300 to-amber-300
  }
  .text-gradient-yellow {
    @apply from-lime-300 to-amber-300
  } */
  .gradient-orange-yellow { 
    @apply from-orange-500 to-yellow-300
  }
  .gradient-orange { 
    /* @apply from-red-500 to-orange-300 */
    @apply to-[hsl(35,100%,55.4%)] from-[hsl(0,85.2%,60.2%)]
  }
}

